feat: add communication_metadata entity
* feat: add communication_metadata entity

* feat: add sql script to replace primary keys

* feat: add Embedded key for CommunicationRequestDB reference

---------

Co-authored-by: Simon Demaziere <simon.demaziere@insee.fr>