@@ -16,8 +16,8 @@ class CommunicationTemplateResponseDtoTest {
     @DisplayName("Should return dto objects")
     void testFromModel() {
         // Given
-        CommunicationTemplate template1 = new CommunicationTemplate(1L, "msg1", CommunicationMedium.EMAIL, CommunicationType.NOTICE);
-        CommunicationTemplate template2 = new CommunicationTemplate(2L, "msg2", CommunicationMedium.LETTER, CommunicationType.REMINDER);
+        CommunicationTemplate template1 = new CommunicationTemplate("SIMPSONS2020X00", "msg1", CommunicationMedium.EMAIL, CommunicationType.NOTICE);
+        CommunicationTemplate template2 = new CommunicationTemplate("SIMPSONS2020X00", "msg2", CommunicationMedium.LETTER, CommunicationType.REMINDER);
         List<CommunicationTemplate> communicationTemplates = List.of(template1, template2);
 
         // When
@@ -26,13 +26,11 @@ class CommunicationTemplateResponseDtoTest {
         // Then
         assertThat(communicationDtos).hasSize(2);
 
-        CommunicationTemplateResponseDto dto1 = communicationDtos.get(0);
-        assertThat(dto1.id()).isEqualTo(1L);
+        CommunicationTemplateResponseDto dto1 = communicationDtos.getFirst();
         assertThat(dto1.medium()).isEqualTo(CommunicationMedium.EMAIL);
         assertThat(dto1.type()).isEqualTo(CommunicationType.NOTICE);
 
         CommunicationTemplateResponseDto dto2 = communicationDtos.get(1);
-        assertThat(dto2.id()).isEqualTo(2L);
         assertThat(dto2.medium()).isEqualTo(CommunicationMedium.LETTER);
         assertThat(dto2.type()).isEqualTo(CommunicationType.REMINDER);
     }
